--- a/src/page.html
+++ b/src/page.html
@@ -27,7 +27,7 @@ limitations under the License.
   </head>
   <body>
     <main>
-      <div class="loader"></div>
+      <div id="app"></div>
     </main>
     <?!= include('javascript'); ?>
   </body>
