--- a/src/page.html
+++ b/src/page.html
@@ -23,6 +23,12 @@ limitations under the License.
       href="https://unpkg.com/gridjs/dist/theme/mermaid.min.css"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans:wght@300..800&display=swap"
+      rel="stylesheet"
+    />
     <?!= include('stylesheet'); ?>
   </head>
   <body>
